--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/0e532e00f5.js" crossorigin="anonymous"></script>
     <title>Pintetrest Card Project</title>
-    <link href="./style.css"/>
+    <link rel="stylesheet" href="./style.css"/>
 </head>
 <body>
+    <div id="img-card">
+        <div id="img-card-overlay"></div>
+        <img src="./lisasimpsons.jpg" alt="lisasimpsons is the president"/>
+
+        <div id="red-rectangle">
+        <span>Save</span>
+        </div>
+    </div>
+
+
     
 </body>
 </html>
