--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
         <div id="red-rectangle">
         <span>Save</span>
         </div>
+
+        <div id="lower-buttons">
+            <div id="check"><i class="fa-solid fa-up-right"></i><span>Lisa Simpsons is the President.</span></div>
+            <div id="share"><i class="fa-sharp fa-solid fa-up-from-bracket"></i></div>
+            <div id="more"><i class="fa-regular fa-ellipsis"></i></div>
+        </div>
+        
     </div>
 
 
